--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <script src="comida.js"></script>
+    <script src="cobra.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
